<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logo_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileSettingsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/connectButton"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/bioEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/bio"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:shadowColor="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/logo_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <EditText
            android:id="@+id/nicknameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/nickname"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:shadowColor="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/logo_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bioEditText"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.cardview.widget.CardView
            android:id="@+id/photoCardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:minWidth="50dp"
            android:minHeight="50dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="200dp">

            <ImageView
                android:id="@+id/photoImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/avatar_of_user_hint"
                android:scaleType="fitXY"
                tools:srcCompat="@mipmap/ic_avatar_placeholder" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoCardView">

            <EditText
                android:id="@+id/firstnameEditText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/firstname"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:shadowColor="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/logo_text" />

            <EditText
                android:id="@+id/lastnameEditText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/lastname"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:shadowColor="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/logo_text" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/serverEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/server_url"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/logo_text"
        app:layout_constraintEnd_toStartOf="@+id/connectButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/connectButton" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/logo_text"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/connect_and_continue"
        android:textColor="@color/logo_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>