<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/messageView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/logo_background"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitleTextColor="@color/logo_text"
        app:title="Fonar"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/logo_text">

        <androidx.cardview.widget.CardView
            android:id="@+id/photoCardView"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/photoImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/avatar_of_user_hint"
                android:scaleType="fitXY"
                app:srcCompat="@mipmap/ic_avatar_placeholder" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_extrabold"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:singleLine="true"
                android:text="@string/my_username_placeholder"
                android:textColor="@color/logo_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/subtitleToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_extrabold"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:singleLine="true"
                android:text="@string/my_nickname_placeholder"
                android:textColor="@color/logo_text"
                android:textSize="12sp" />

        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>


    <ViewAnimator
        android:id="@+id/sample_output"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/userListFragment"
            android:name="ru.georgii.fonar.gui.DialogListFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_dialogs" />

    </ViewAnimator>

</android.widget.LinearLayout>